<resources>
    <string name="app_name">My Application</string>
    <string name="lesson">LESSON</string>
    <string name="exam">EXAM</string>
    <string name="abc_learning">ABC Learning</string>
    <string name="for_kids">For Kids</string>
    <string name="this_is_exams">this is exams</string>
    <string name="textview">TextView</string>
    <string name="my_text">my text</string>
    <string name="todo">TODO</string>
    <string name="todoo">TODO</string>
    <string name="score">Score:</string>
    <string name="_0">0</string>
    <string name="b_for_ball">B for ball</string>
    <string name="tru">true</string>
    <string name="abc_learning_app">ABC Learning App</string>
    <string name="retry_quiz">Retry Quiz</string>
    <string name="congratulations">Congratulations</string>
    <string name="you_scored_9_out_of_10">You scored 9 out of 10</string>
    <string name="False">false</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
</resources>