<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgclous"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button1"
        android:layout_width="141dp"
        android:layout_height="89dp"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="160dp"
        android:background="@color/material_dynamic_primary20"
        android:fontFamily="@font/chango"
        android:text="@string/lesson"
        android:textSize="24sp"
        android:textStyle="bold"
        app:iconTint="#009688"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtmain2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="139dp"
        android:layout_height="88dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="198dp"
        android:background="#C2185B"
        android:text="@string/exam"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtmain"
        android:layout_width="256dp"
        android:layout_height="62dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/chewy"
        android:text="@string/abc_learning_app"
        android:textColor="#546E7A"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/txtmain2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtmain2"
        android:layout_width="121dp"
        android:layout_height="76dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="45dp"
        android:fontFamily="@font/chewy"
        android:text="@string/for_kids"
        android:textColor="#020001"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtmain"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>